# modules

./: .gitignore  BUILD  Cargo.toml  README.md  WORKSPACE  deps.bzl  packages.bzl  versions.bzl
.github/workflows/: modules.yml
dynamic/: README.md
dynamic/rust/hello/: Cargo.toml
dynamic/rust/ip_restriction/: Cargo.toml  README.md
dynamic/rust/ip_restriction/src/: lib.rs
go/: README.md
integration/: integration.sh
integration/ip_restriction/: docker-compose.yaml  envoy.yaml  verify.py
wasm/: BUILD  README.md
wasm/http-hello-world/: BUILD  module.rst  module.yaml
