
[package]
name = "envoy-proxy-dynamic-modules-rust-hello"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/envoyproxy/modules"

[dependencies]
# The SDK version must match the Envoy version due to the strict compatibility requirements.
envoy-proxy-dynamic-modules-rust-sdk = { git = "https://github.com/envoyproxy/envoy", rev = "73fe00fc139fd5053f4c4a5d66569cc254449896" }

[lib]
name = "hello_proxy"
path = "src/lib.rs"
crate-type = ["cdylib"]
