
[package]
name = "envoy-proxy-dynamic-modules-rust-ip-restriction"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/envoyproxy/modules"

[dependencies]
# The SDK version must match the Envoy version due to the strict compatibility requirements.
envoy-proxy-dynamic-modules-rust-sdk = { git = "https://github.com/envoyproxy/envoy", rev = "4d2c32b3f3ec5cd1be5666819cc190ef2b0da8e3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "ip_restriction"
path = "src/lib.rs"
crate-type = ["cdylib"]
